--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ Ela étudo que vem abaixo do carrossel*/
 /* a div se chama ajuste1 e se refere ao
 primeiro conteúdo que tem abaixo do carrossel,
 se chama assim pois regula o conteúdo, mas é
-da mesma cor */
+transparante */
 
 #ajuste1{
     position: absolute;
@@ -50,16 +50,26 @@ da mesma cor */
     margin-top: 700px;
     width: 100%;
     height: 550px;
-    background-color: rgb(133, 61, 119);
 }
 
 .ajustetituloobjetivos{
+    position: absolute;
+    width: 100%;
+    height: 500px;
+    background-color: aqua;
 
 }
 .tituloobjetivos{
     text-align: center;
     font-family: 'Kadwa';
     font-size: 64px;
+}
+
+.seteum{
+    position: absolute;
+    width: 100%;
+    height: 65px;
+    background-color:blue;
 }
 
 .um{
@@ -71,10 +81,11 @@ da mesma cor */
 }
 
 .dois{
+    position: relative;
     text-align: center;
     font-family: 'Kadwa';
+    margin-left: 625px;
     font-size: 48px;
-    margin-left: 635px;
     float:left;
 }
 
@@ -82,6 +93,35 @@ da mesma cor */
     text-align: center;
     font-family: 'Kadwa';
     font-size: 48px;
-    margin-right: 48px;
-    float:right;
+    margin-left: 610px;
+    float:left;
+}
+
+#acordeon1{
+    position:relative;
+    margin-left: 50px;
+    margin-top: 100px;
+
+}
+
+.acordeon1{
+    position: relative;
+    float: left;
+    margin-left: 25px;
+    margin-top: 70px;
+    width: 300px;
+}
+
+#textoacordeon1{
+    float: left;
+    position: relative;
+    margin-left: 25px;
+    margin-top: 70px;
+    width: 300px;
+}
+
+.caixadosacordeons{
+    width: 100%;
+    height: 388px;
+    background-color: blueviolet; 
 }
