--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,6 @@ transparante */
     position: absolute;
     width: 100%;
     height: 65px;
-    background-color:blue;
 }
 
 .um{
@@ -77,6 +76,7 @@ transparante */
     font-family: 'Kadwa';
     font-size: 48px;
     margin-left: 48px;
+    margin-top: 0px;
     float:left;
 }
 
@@ -96,32 +96,23 @@ transparante */
     margin-left: 610px;
     float:left;
 }
-
-#acordeon1{
-    position:relative;
-    margin-left: 50px;
-    margin-top: 100px;
-
-}
-
-.acordeon1{
-    position: relative;
-    float: left;
-    margin-left: 25px;
-    margin-top: 70px;
-    width: 300px;
-}
-
-#textoacordeon1{
-    float: left;
-    position: relative;
-    margin-left: 25px;
-    margin-top: 70px;
-    width: 300px;
-}
-
 .caixadosacordeons{
+    position: relative;
     width: 100%;
     height: 388px;
     background-color: blueviolet; 
+}
+
+.ajusteacordeon1{
+    width: 300px !important;
+    margin-top: 100px;
+    margin-left: 10px;
+}
+
+.ajusteacordeon2{
+    float: left;
+    position: absolute;
+    width: 300px !important;
+    margin-top: -55px;
+    margin-left: 695px;
 }
