--- a/css/style.css
+++ b/css/style.css
@@ -32,15 +32,15 @@ transparente */
 
 .ajustedotexto1{
     position: relative;
-    float: right;
-    margin-top: 200px;
+    float: right !important;
+    margin-top: 200px !important;
     margin-right: 15px;
 
 }
 
 .textoajuste1{
     text-align: center;
-    font-size: 24px;
+    font-size: 12px;
     font-family:'Kadwa';
 }
 
